# vaults

./: README.md  app  meson.build
data/: com.github.arkaitzsilva.vaults.appdata.xml  com.github.arkaitzsilva.vaults.desktop  com.github.arkaitzsilva.vaults.gresource.xml  com.github.arkaitzsilva.vaults.gschema.xml  meson.build
po/: POTFILES
src/: Application.vala  Main.vala  meson.build
src/configs/: Constants.vala
src/views/: AppHeaderBar.vala  AppView.vala  AppWindow.vala
